// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer Editor should correctly calculates date format 1`] = `
<Connect(withEntityEditor(UnwrappedDate))
  answer={
    Object {
      "description": "",
      "id": "1",
      "properties": Object {
        "format": "yyyy",
      },
      "title": "",
      "type": "Date",
    }
  }
  onAddExclusive={[Function]}
  onAddOption={[Function]}
  onAddOther={[Function]}
  onChange={[Function]}
  onDeleteAnswer={[Function]}
  onDeleteOption={[Function]}
  onDeleteOther={[Function]}
  onUpdate={[Function]}
  onUpdateOption={[Function]}
  showDay={false}
  showMonth={false}
  showYear={true}
/>
`;

exports[`Answer Editor should correctly calculates date format 2`] = `
<Connect(withEntityEditor(UnwrappedDate))
  answer={
    Object {
      "description": "",
      "id": "1",
      "properties": Object {
        "format": "mm/yyyy",
      },
      "title": "",
      "type": "Date",
    }
  }
  onAddExclusive={[Function]}
  onAddOption={[Function]}
  onAddOther={[Function]}
  onChange={[Function]}
  onDeleteAnswer={[Function]}
  onDeleteOption={[Function]}
  onDeleteOther={[Function]}
  onUpdate={[Function]}
  onUpdateOption={[Function]}
  showDay={false}
  showMonth={true}
  showYear={true}
/>
`;

exports[`Answer Editor should correctly calculates date format 3`] = `
<Connect(withEntityEditor(UnwrappedDate))
  answer={
    Object {
      "description": "",
      "id": "1",
      "properties": Object {
        "format": "dd/mm/yyyy",
      },
      "title": "",
      "type": "Date",
    }
  }
  onAddExclusive={[Function]}
  onAddOption={[Function]}
  onAddOther={[Function]}
  onChange={[Function]}
  onDeleteAnswer={[Function]}
  onDeleteOption={[Function]}
  onDeleteOther={[Function]}
  onUpdate={[Function]}
  onUpdateOption={[Function]}
  showDay={true}
  showMonth={true}
  showYear={true}
/>
`;

exports[`Answer Editor should render Checkbox 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    Checkbox
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <MultipleChoiceAnswer
      answer={
        Object {
          "description": "",
          "id": "1",
          "options": Array [
            Object {
              "description": "",
              "id": "1",
              "label": "",
            },
          ],
          "title": "",
          "type": "Checkbox",
        }
      }
      minOptions={1}
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
      type="Checkbox"
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;

exports[`Answer Editor should render Currency 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    Currency
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <CurrencyAnswer
      answer={
        Object {
          "description": "",
          "id": "1",
          "title": "",
          "type": "Currency",
        }
      }
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;

exports[`Answer Editor should render Date 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    Date
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <Connect(withEntityEditor(UnwrappedDate))
      answer={
        Object {
          "description": "",
          "id": "1",
          "title": "",
          "type": "Date",
        }
      }
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
      showDay={false}
      showMonth={false}
      showYear={false}
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;

exports[`Answer Editor should render DateRange 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    DateRange
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <DateRange
      answer={
        Object {
          "description": "",
          "id": "1",
          "title": "",
          "type": "DateRange",
        }
      }
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;

exports[`Answer Editor should render Number 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    Number
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <Connect(withEntityEditor(StatelessBasicAnswer))
      answer={
        Object {
          "description": "",
          "id": "1",
          "title": "",
          "type": "Number",
        }
      }
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;

exports[`Answer Editor should render Radio 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    Radio
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <MultipleChoiceAnswer
      answer={
        Object {
          "description": "",
          "id": "1",
          "options": Array [
            Object {
              "description": "",
              "id": "1",
              "label": "",
            },
          ],
          "title": "",
          "type": "Radio",
        }
      }
      minOptions={2}
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
      type="Radio"
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;

exports[`Answer Editor should render TextArea 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    TextArea
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <Connect(withEntityEditor(StatelessBasicAnswer))
      answer={
        Object {
          "description": "",
          "id": "1",
          "title": "",
          "type": "TextArea",
        }
      }
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;

exports[`Answer Editor should render TextField 1`] = `
<AnswerEditor__Answer>
  <AnswerEditor__AnswerType>
    TextField
  </AnswerEditor__AnswerType>
  <AnswerEditor__Padding>
    <Connect(withEntityEditor(StatelessBasicAnswer))
      answer={
        Object {
          "description": "",
          "id": "1",
          "title": "",
          "type": "TextField",
        }
      }
      onAddExclusive={[Function]}
      onAddOption={[Function]}
      onAddOther={[Function]}
      onChange={[Function]}
      onDeleteAnswer={[Function]}
      onDeleteOption={[Function]}
      onDeleteOther={[Function]}
      onUpdate={[Function]}
      onUpdateOption={[Function]}
    />
  </AnswerEditor__Padding>
  <Tooltip
    content="Delete answer"
    offset={
      Object {
        "bottom": 10,
        "top": 0,
      }
    }
    place="top"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      data-test="btn-delete-answer"
      onClick={[Function]}
      size="medium"
    />
  </Tooltip>
</AnswerEditor__Answer>
`;
